[CTTE] RenderGrid is never anonymous. <https://webkit.org/b/121290>

Reviewed by Antti Koivisto.

Hide element() and provide existingElement() instead, returning an Element&.

Canonical link: https://commits.webkit.org/139244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155687 268f45cc-cd09-0410-ab3c-d52691b4dbfc